Uses Number.valueOf instead of new Number, because it uses a cache.